# geese

./: .gitignore  Cargo.toml  README.md
assets/static/: upload.html
assets/templates/: goose.html
src/: cloudinary.rs  forms.rs  hex.rs  hexcolor.rs  main.rs  models.rs  routes.rs  structures.rs
src/routes/: hatchery.rs  list.rs
src/structures/: forms.rs  hexcolor.rs  models.rs
static/: index.html
static/hatchery/: index.html
