[package]
name = "geese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2"
serde = { version = "1", features = ["derive"] }
regex = "1"
tera = { version = "1", default-features = false }
lazy_static = "1.4.0"