[package]
name = "geese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
mongodb = "2"
serde = { version = "1", features = ["derive"] }
tera = { version = "1", default-features = false }
lazy_static = "1.4.0"
image = "0.24.5"
reqwest = "0.11.12"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["mongodb"]