[package]
name = "geese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
mongodb = "2"
serde = { version = "1", features = ["derive"] }
tera = { version = "1", default-features = false }
lazy_static = "1.4.0"
reqwest = { version = "0.11.12", features = ["multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
dotenv = "0.15.0"
sha-1 = "0.10.0"
hex = "0.4.3"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["mongodb"]